start shift ops